--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,10 @@
         <br>
         <div class="center text-big bold">
             Hi! I am sachin this is my first web app.
-             New heading 
+            <div>
+                New heading
+            </div>
+
              
         </div>
         <script type="text/javascript" src="/ui/main.js">
