[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,32 @@
+<!DOCTYPE HTML>
 <html>
+    <head>
+        <title>
+            article-one| sachin v
+        </title>
+        </head>
+        <body>
+            <div>
+                <a href="/">Hom</a>
+            </div>
+            <h3>
+                Article one
+            </h3>
+            <div>
+                sep 21, 2016
+            </div>
+            <div>
+                <P>
+               First article one. First article one. First article one. First article one. First article one. First article one. First article one. First article one. First article one. First article one.
+               </p>
+               <P>
+               First article one. First article one. First article one. First article one. First article one. First article one. First article one. First article one. First article one. First article one.
+               </p>
+               <P>
+               First article one. First article one. First article one. First article one. First article one. First article one. First article one. First article one. First article one. First article one.
+               </p>
+
+            </div>
+        </body>
+    
 </html>
