--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -7,7 +7,7 @@
         </head>
         <body>
             <div>
-                <a href="/">Hom</a>
+                <a href="/">Home</a>
             </div>
             <h3>
                 Article one
