--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,6 +4,7 @@
         <title>
             article-one| sachin v
         </title>
+        <meta name="viewport" console="width-device-width" intial-scale-1/>
         </head>
         <body>
             <div>
