[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            article-one| sachin v
+            article-two| sachin v
         </title>
         <meta name="viewport" console="width-device-width" intial-scale-1/>
         </head>
@@ -11,20 +11,20 @@
                 <a href="/">Home</a>
             </div>
             <h3>
-                Article one
+                Article two
             </h3>
             <div>
                 sep 21, 2016
             </div>
             <div>
                 <P>
-               First article one. First article one. First article one. First article one. First article one. First article one. First article one. First article one. First article one. First article one.
+               First article two. First article two. First article two. First article one. First article one. First article one. First article one. First article one. First article one. First article one.
                </p>
                <P>
-               First article one. First article one. First article one. First article one. First article one. First article one. First article one. First article one. First article one. First article one.
+               First article two. First article two. First article one. First article one. First article one. First article one. First article one. First article one. First article one. First article one.
                </p>
                <P>
-               First article one. First article one. First article one. First article one. First article one. First article one. First article one. First article one. First article one. First article one.
+               First article two. First article one. First article one. First article one. First article one. First article one. First article one. First article one. First article one. First article one.
                </p>
 
             </div>
