[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -5,8 +5,18 @@
             article-one| sachin v
         </title>
         <meta name="viewport" console="width-device-width" intial-scale-1/>
+        <style>
+           .conatiner
+           {
+            font-family:sans-serif;
+            color: grey;
+            max-width:800px;
+            margin:0 auto;
+           }
+        </style>
         </head>
         <body>
+            <div class="container">
             <div>
                 <a href="/">Home</a>
             </div>
@@ -28,6 +38,8 @@
                </p>
 
             </div>
+            </div>
+            
         </body>
     
 </html>
