--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,7 +6,7 @@
         </title>
         <meta name="viewport" console="width-device-width" intial-scale-1/>
         <style>
-           .conatiner
+           .container
            {
             font-family:sans-serif;
             color: grey;
