--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -5,6 +5,7 @@
             article-two| sachin v
         </title>
         <meta name="viewport" console="width-device-width" intial-scale-1/>
+         <link href="/ui/style.css" rel="stylesheet" />
         </head>
         <body>
             <div>
