[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -5,6 +5,7 @@
             article-one| sachin v
         </title>
         <meta name="viewport" console="width-device-width" intial-scale-1/>
+         <link href="/ui/style.css" rel="stylesheet" />
         <style>
            .container
            {
