[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -13,9 +13,10 @@
             <div>
                 New heading
             </div>
-
-             
         </div>
+        <script>
+            alert("hello, i ma java scritpt");
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
